WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48373
Fix compile when ACCELERATED_COMPOSITING flag is not set
https://bugs.webkit.org/show_bug.cgi?id=48373
Summary
Fix compile when ACCELERATED_COMPOSITING flag is not set
Victoria Kirst
Reported
2010-10-26 14:01:51 PDT
Fix compile when ACCELERATED_COMPOSITING flag is not set
Attachments
Patch
(4.59 KB, patch)
2010-10-26 14:09 PDT
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Victoria Kirst
Comment 1
2010-10-26 14:09:43 PDT
Created
attachment 71935
[details]
Patch
WebKit Commit Bot
Comment 2
2010-10-26 22:26:20 PDT
Comment on
attachment 71935
[details]
Patch Clearing flags on attachment: 71935 Committed
r70610
: <
http://trac.webkit.org/changeset/70610
>
WebKit Commit Bot
Comment 3
2010-10-26 22:26:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug