2010-10-26  Victoria Kirst  <vrk@google.com>

Reviewed by David Levin.

        Fix compile when ACCELERATED_COMPOSITING flag is not set
        https://bugs.webkit.org/show_bug.cgi?id=48373

        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::~WebMediaPlayerClientImpl):
        (WebKit::WebMediaPlayerClientImpl::readyStateChanged):
        (WebKit::WebMediaPlayerClientImpl::load):
        * src/WebMediaPlayerClientImpl.h:

Canonical link: https://commits.webkit.org/61133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70610 268f45cc-cd09-0410-ab3c-d52691b4dbfc