WebKit/chromium/src/WebMediaPlayerClientImpl.cpp
@@ -99,8 +99,10 @@ WebMediaPlayerClientImpl::~WebMediaPlayerClientImpl()
 {
     // VideoLayerChromium may outlive this object so make sure all frames are
     // released.
+#if USE(ACCELERATED_COMPOSITING)
     if (m_videoLayer.get())
         m_videoLayer->releaseCurrentFrame();
+#endif
 }
 
 void WebMediaPlayerClientImpl::networkStateChanged()
@@ -113,8 +115,10 @@ void WebMediaPlayerClientImpl::readyStateChanged()
 {
     ASSERT(m_mediaPlayer);
     m_mediaPlayer->readyStateChanged();
+#if USE(ACCELERATED_COMPOSITING)
     if (hasVideo() && supportsAcceleratedRendering() && !m_videoLayer.get())
         m_videoLayer = VideoLayerChromium::create(0, this);
+#endif
 }
 
 void WebMediaPlayerClientImpl::volumeChanged(float newVolume)
@@ -185,8 +189,10 @@ void WebMediaPlayerClientImpl::load(const String& url)
 
     // Video frame object is owned by WebMediaPlayer. Before destroying
     // WebMediaPlayer all frames need to be released.
+#if USE(ACCELERATED_COMPOSITING)
     if (m_videoLayer.get())
         m_videoLayer->releaseCurrentFrame();
+#endif
 
     m_webMediaPlayer.set(createWebMediaPlayer(this, frame));
     if (m_webMediaPlayer.get())
@@ -418,19 +424,18 @@ bool WebMediaPlayerClientImpl::hasSingleSecurityOrigin() const
     return false;
 }
 
-#if USE(ACCELERATED_COMPOSITING)
-bool WebMediaPlayerClientImpl::supportsAcceleratedRendering() const
-{
-    return m_supportsAcceleratedCompositing;
-}
-#endif
-
 MediaPlayer::MovieLoadType WebMediaPlayerClientImpl::movieLoadType() const
 {
     if (m_webMediaPlayer.get())
         return static_cast<MediaPlayer::MovieLoadType>(
             m_webMediaPlayer->movieLoadType());
     return MediaPlayer::Unknown;
+}
+
+#if USE(ACCELERATED_COMPOSITING)
+bool WebMediaPlayerClientImpl::supportsAcceleratedRendering() const
+{
+    return m_supportsAcceleratedCompositing;
 }
 
 VideoFrameChromium* WebMediaPlayerClientImpl::getCurrentFrame()
@@ -454,6 +459,7 @@ void WebMediaPlayerClientImpl::putCurrentFrame(VideoFrameChromium* videoFrame)
         delete videoFrame;
     }
 }
+#endif
 
 MediaPlayerPrivateInterface* WebMediaPlayerClientImpl::create(MediaPlayer* player)
 {
